# ispc_texture_compressor_cmake

./: CMakeLists.txt  readme.md
